OOP2: add WorkoutSummary/UserGoal records, full WorkoutService, AnalyticsService, WorkoutDataManager, i18n, Java25Demo